# talk-to-tacos

./: .gitignore  agent.py  conversation_store.py  dashboard.py  database.py  gcp_config.py  main.py  pyproject.toml  requirements.txt  temp_db.sqlite  testdb.ipynb  view_conversations.py
examples/: Walmart_Tacos_Report_Flying_Star_2025-01-01_to_2025-05-15_May_16_2025_0442.xlsx  cleaned_Walmart_Tacos_Report_Flying_Star_2025-01-01_to_2025-05-15_May_16_2025_0442.xlsx
